# vision_coach

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml
configs/: pipeline.yaml  sources.yaml  train.yaml  vocabulary.yaml
src/workout_ml/: __init__.py  artifacts.py  catalog.py  cli.py  progress.py  settings.py
src/workout_ml/dataset/: __init__.py
src/workout_ml/ingest/: __init__.py  channels.py  download.py
src/workout_ml/labeling/: __init__.py
src/workout_ml/models/: __init__.py
src/workout_ml/pose/: __init__.py
src/workout_ml/realtime/: __init__.py
src/workout_ml/reps/: __init__.py
tests/: test_artifacts.py  test_catalog.py  test_ingest_channels.py  test_ingest_download.py  test_ingest_live.py  test_progress.py  test_settings.py
